--- a/index.html
+++ b/index.html
@@ -155,8 +155,8 @@
     
             <!-- project links -->
             <h1 id="projects" class="text-blue">projects.</h1>
-            <projects class="d-flex flex-wrap m-5 just-cont-center">
-                <everstrong id="project" class="orange ">
+            <projects class="d-flex flex-wrap m-5 just-cont-center ">
+                <everstrong id="project" class="orange  d-flex flex-column align-center">
                     <h1 class="text-center p-padding text-white">EverStrong Workout Manager</h1>
                     <p class="text-blue p-padding">A full stack Python project, designed to help workout enthusiasts schedule and create workouts 
                         and the exercises they want to do in them. You can see your week, weight, and workouts created 
@@ -167,7 +167,7 @@
                     <video class="video" src="videos/everstrong.mov" autoplay loop></video>
                     
                 </everstrong>
-                <exercises id="project" class="orange ">
+                <exercises id="project" class="orange d-flex flex-column align-center">
                     <h1 class="text-center p-padding text-white">Exercises REST-API</h1>
                     <p class="text-blue p-padding"> A back end/database project providing a large database of exercises, descriptions and 
                         their muscle group. With the ability to search for exercises by muscle group, it provides the functionality of most 
@@ -177,7 +177,7 @@
                     <p class="text-blue p-padding">MADE WITH: React - Node - MongoDB - Mongoose - JavaScript</p>
                     <video class="video" src="videos/exercises.mov" autoplay loop></video>
                 </exercises>
-                <games id="project" class="orange ">
+                <games id="project" class="orange d-flex flex-column align-center ">
                     <h1 class="text-center p-padding text-white">OOP Terminal Games</h1>
                     <p class="text-blue p-padding"> Two back end games made for interactive play in the terminal on mac/linux or windows.
                         Providing options for the user to choose the player and the movements, these games implement complex algorithms to
@@ -187,12 +187,12 @@
                     <p class="text-blue p-padding">MADE WITH: Python - Flask</p>
                     <video class="video" src="videos/games.mov" autoplay loop></video>
                 </games>
-                <portfolio id="project" class="orange ">
+                <portfolio id="project" class="orange d-flex flex-column align-center ">
                     <h1 class="text-center p-padding text-white">Portfolio</h1>
                     <p class="text-blue p-padding"> Front end technologies used to their full extent to display my personal information,
                         projects, technologies and skills. Javascript used to change elements on the screen and An excellent display of 
                         my front-end skills with styling coming from my own css file.
-                        <a class="text-blue" href="https://github.com/kwersland/portfolio">github</a>
+                        <a class="text-blue" href="https://github.com/kwersland/kwersland.github.io">github</a>
                     </p>
                     <p class="text-blue p-padding">MADE WITH: HTML - CSS - JavaScript</p>
                     <video class="video" src="videos/portfolio.mov" autoplay loop></video>
