--- a/index.html
+++ b/index.html
@@ -224,16 +224,11 @@
                         <h1 class="title text-blue p-20">Energy Consultant</h1>
                         <h4 class="time text-light text-blue p-20">Feb 2021 - Jul 2022</h4>
                     </div>
-                    <h3 class="p1 text-blue p-20">-> Brought in thousands of dollars in residual revenue for each respective company.</h3>
-                    <h3 class="p2 text-blue p-20">-> Led and managed multiple business to customer relations in the process of contacting, signing and installing solar panels.</h3>
-                    <h3 class="p3 text-blue p-20">-> Efficiently communicated with our install team and each customer to ensure the process was efficient.</h3>
+                    <h3 class="p1 text-blue">-> Brought in thousands of dollars in residual revenue for each respective company.</h3>
+                    <h3 class="p2 text-blue">-> Led and managed multiple business to customer relations in the process of contacting, signing and installing solar panels.</h3>
+                    <h3 class="p3 text-blue">-> Efficiently communicated with our install team and each customer to ensure the process was efficient.</h3>
                 </div>
             </history>
-            <!-- fun facts -->
-            <!-- <funfacts>
-                <h1 class="text-blue">fun facts.</h1>
-                <p></p>
-            </funfacts> -->
         </div>
 
         <!-- footer with links -->
@@ -241,7 +236,7 @@
             <div class="contactsIcons d-flex just-cont-around align-center p-padding">
                 <a href="http://github.com/kwersland"><img class="bottom" src="images/github.png" alt="github"></a>
                 <a href="http://linkedin.com/in/karsten-wersland"><img class="bottom" src="images/linkedin.png" alt="linkedin"></a>
-                <a class="text-blue" href="mailto:k.wersland25@gmail.com">k.wersland25@gmail.com</a>
+                <a id="email" class="text-blue" href="mailto:k.wersland25@gmail.com">k.wersland25@gmail.com</a>
                 <a class="text-blue" href="https://docs.google.com/document/d/1_6lWmMae3uXrOyiFzm8ONR3k1wuSAGQJnAzh0Xl5-70/edit?usp=sharing">my resume</a>
             </div>
             <p class="text-blue text-center p-20">by karsten wersland</p>
