--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
                     <h2 class="text-blue history executive" onmouseover="change(this)" onmouseout="changeBack(this)" onclick="accountExecutive()">Account Executive</h2>
                     <h2 class="text-blue history missionary" onmouseover="change(this)" onmouseout="changeBack(this)" onclick="missionary()">Volunteer Missionary</h2>
                 </div>
-                <div class="box p-margin p-40 white">
+                <div id="description" class="box p-margin p-40 white">
                     <div class="d-flex align-center just-cont-between">
                         <h1 class="title text-blue p-20">Energy Consultant</h1>
                         <h4 class="time text-light text-blue p-20">Feb 2021 - Jul 2022</h4>
